@@ -36,10 +36,13 @@ double pexp(double x, double scale, int lower_tail, int log_p)
 
     if (x <= 0.)
 	return R_DT_0;
+    /* same as weibull( shape = 1): */
+    x = -(x / scale);
     if (lower_tail)
-	return  R_D_val(-expm1(-x / scale));
-    if (log_p) /* && !lower_tail */
-	return (-x / scale);
-    /* else !log_p and !lower_tail :*/
-    return exp(-x / scale);
+	return (log_p
+		/* log(1 - exp(x))  for x < 0 : */
+		? (x > -M_LN2 ? log(-expm1(x)) : log1p(-exp(x)))
+		: -expm1(x));
+    /* else:  !lower_tail */
+    return R_D_exp(x);
 }
