@@ -35,10 +35,12 @@ double pweibull(double x, double shape, double scale, int lower_tail, int log_p)
 
     if (x <= 0)
 	return R_DT_0;
+    x = -pow(x / scale, shape);
     if (lower_tail)
-	return R_D_val(-expm1(-pow(x / scale, shape)));
-    if (log_p) /* && !lower_tail */
-	return 		      -pow(x / scale, shape);
-    /* else !log_p and !lower_tail :*/
-    return                exp(-pow(x / scale, shape));
+	return (log_p
+		/* log(1 - exp(x))  for x < 0 : */
+		? (x > -M_LN2 ? log(-expm1(x)) : log1p(-exp(x)))
+		: -expm1(x));
+    /* else:  !lower_tail */
+    return R_D_exp(x);
 }
